# VirtuaCast

./: LICENSE  README.md
Fonts/: example.txt
scripts/: blueprint.py  blueprintinswapper.py  blueprintonnx.py  clone.py  convert.py  directport.py  validate_emb.py  validate_emb2.py  validate_embedding.py  validate_inswapper.py  validate_pipeline.py  video_swapper.py  visualize_embedding.py
src/: CMakeLists.txt
src/Shaders/: CameraSetup.hlsl  Composite.hlsl  LandmarkHeatMap.hlsl  NV12toBGRA.hlsl  PostprocessBlend.hlsl  PreprocessInswapper.hlsl  VisualBoundingBox.hlsl  VisualizeLandmarks.hlsl  YUY2toBGRA.hlsl  shared.h
src/VirtuaCast/: Algorithms.h  Blend.cpp  Blend.h  BoundingBox.cpp  BoundingBox.h  BufferManager11.cpp  BufferManager11.h  BufferManager12.cpp  BufferManager12.h  CameraShader.cpp  CameraShader.h  CameraSource.cpp  CameraSource.h  Console.cpp  Console.h  Consumer.cpp  Consumer.h  CreateBlob.cpp  CreateBlob.h  DMLHelper.cpp  DMLHelper.h  DataBus.cpp  DataBus.h  DebugOutput.cpp  DebugOutput.h  FaceDetection.cpp  FaceDetection.h  FaceEmbedding.cpp  FaceEmbedding.h  FaceSwap.cpp  FaceSwap.h  Files.cpp  Files.h  Framework.h  Generator.cpp  Generator.h  GpuTypes.h  KeyCommands.cpp  KeyCommands.h  OnnxRuntime.cpp  (+19 more)
